@@ -1,3 +1,7 @@
+2017-09-27  Jean-Louis Martineau <JMartineau@carbonite.com>
+	Patch by Nathan Stratton Treadway
+	* man/xml-source/amvault.8.xml: Improve page
+
 2017-09-26  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* perl/Amanda/Report.pm: Parse server-src on SUCCESS dumper line
 	* server-src/ambackupd.pl: Do not print the server-src on
